--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -731,28 +731,31 @@ a {
   margin: 0 auto;
   width: 1120px; }
 
-.single-post .site-content {
+.postid-42 .site-content {
   margin: auto;
   padding-top: 28px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
-  .single-post .site-content .entry-header {
+  .postid-42 .site-content .entry-header {
     position: relative; }
-    .single-post .site-content .entry-header img {
+    .postid-42 .site-content .entry-header img {
       width: 100%; }
-    .single-post .site-content .entry-header .entry-title {
+    .postid-42 .site-content .entry-header .entry-title {
       background-color: #248A83;
       font-family: "nov", Arial, sans-serif;
       text-transform: uppercase;
       position: absolute;
       top: 20px;
       left: 0;
-      color: #f1f1f1; }
-      .single-post .site-content .entry-header .entry-title a {
+      color: #f1f1f1;
+      width: 80%; }
+      .postid-42 .site-content .entry-header .entry-title a {
         color: #f1f1f1;
-        font-family: "nov", Arial, sans-serif; }
-    .single-post .site-content .entry-header .entry-meta {
+        font-family: "nov", Arial, sans-serif;
+        font-size: 40px;
+        padding: 2% 1%; }
+    .postid-42 .site-content .entry-header .entry-meta {
       background-color: #248A83;
       font-family: "nov", Arial, sans-serif;
       color: #f1f1f1;
@@ -760,19 +763,28 @@ a {
       position: absolute;
       right: 0;
       bottom: 7px; }
+      .postid-42 .site-content .entry-header .entry-meta time.entry-date.published {
+        color: #f1f1f1;
+        font-family: "nov", Arial, sans-serif;
+        font-size: 16px; }
 
 .social-media-journal {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%; }
-  .social-media-journal a {
+  width: 100%;
+  font-family: "nov", Arial, sans-serif; }
+  .social-media-journal button.blk {
+    border-radius: 0;
+    background: transparent;
     border: 1px solid black;
     padding: 10px 30px;
     color: black;
-    font-family: "nov", Arial, sans-serif;
     text-transform: uppercase;
-    margin-left: 10px; }
+    margin-left: 10px;
+    font-family: "nov", Arial, sans-serif;
+    -webkit-box-shadow: none;
+            box-shadow: none; }
   .social-media-journal i {
     color: black;
     margin-right: 10px; }
@@ -894,6 +906,49 @@ input.submit {
   text-transform: uppercase;
   padding: 1% 2%; }
 
+.single-post #wpcf7-f140-p45-o1 {
+  width: 100%; }
+
+.single-post .nav-next {
+  display: none; }
+
+.single-post .site-content {
+  margin: auto;
+  padding-top: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .single-post .site-content .entry-header {
+    position: relative; }
+    .single-post .site-content .entry-header img {
+      width: 100%; }
+    .single-post .site-content .entry-header .entry-title {
+      background-color: #248A83;
+      font-family: "nov", Arial, sans-serif;
+      text-transform: uppercase;
+      position: absolute;
+      top: 20px;
+      left: 0;
+      color: #f1f1f1;
+      width: 80%; }
+      .single-post .site-content .entry-header .entry-title a {
+        color: #f1f1f1;
+        font-family: "nov", Arial, sans-serif;
+        font-size: 40px;
+        padding: 2% 1%; }
+    .single-post .site-content .entry-header .entry-meta {
+      background-color: #248A83;
+      font-family: "nov", Arial, sans-serif;
+      color: #f1f1f1;
+      text-align: center;
+      position: absolute;
+      right: 0;
+      bottom: 7px; }
+      .single-post .site-content .entry-header .entry-meta time.entry-date.published {
+        color: #f1f1f1;
+        font-family: "nov", Arial, sans-serif;
+        font-size: 16px; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -992,7 +1047,9 @@ ul.stories {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  list-style: none; }
+  list-style: none;
+  margin: 0;
+  padding: 0; }
 
 li.storie-items {
   border: 1px solid #e1e1e1;
@@ -1717,3 +1774,6 @@ h1.entry-title {
   font-size: 16px;
   line-height: 2.25em;
   font-weight: 100; }
+
+#wpcf7-f140-p42-o1 {
+  width: 100%; }
